src/objects/Grouping__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minimum_Customer_Spend_Amount__c</fullName>
        <label>Minimum Customer Spend Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volume Based</fullName>
                </value>
                <value>
                    <fullName>Minimum Customer Spend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Grouping</label>
    <nameField>
        <label>Grouping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groupings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>